public/v/release-3.2/_sources/repositories_and_packages/isaac_ros_nitros/isaac_ros_nitros_bridge/isaac_ros_nitros_bridge_ros2/index.rst.txt
==============
|package_name|
==============

:ir_github:`<isaac_ros_nitros_bridge> <isaac_ros_nitros_bridge_ros2>`

API
----

Usage
^^^^^

.. code:: bash

   ros2 launch isaac_ros_nitros_bridge_ros2 isaac_ros_nitros_bridge.launch.py rosbag_path:='<Absolute path to your input rosbag>' ros1_ws_path:='<Absolute path to your ros1 workspace>'

ROS Parameters
^^^^^^^^^^^^^^

============== =========== ======= =============================================
ROS Parameter  Type        Default Description
============== =========== ======= =============================================
``num_blocks`` ``int64_t`` ``40``  The number of pre-allocated GPU memory blocks
============== =========== ======= =============================================

ROS Topics Subscribed
^^^^^^^^^^^^^^^^^^^^^

=========================== ========================================================================================================================================================================================== ========================================================
ROS Topic                   Type                                                                                                                                                                                       Description
=========================== ========================================================================================================================================================================================== ========================================================
``ros2_input_image``        `sensor_msgs/Image <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/Image.msg>`__                                                                                    Input ROS 2 image to be converted to NITROS bridge image
``ros2_input_bridge_image`` :ir_repo:`isaac_ros_nitros_bridge_interfaces/msg/NitrosBridgeImage <isaac_ros_common> <isaac_ros_nitros_bridge_interfaces/msg/NitrosBridgeImage.msg>`                                      Input NITROS bridge image to be converted to ROS 2 image
=========================== ========================================================================================================================================================================================== ========================================================

ROS Topics Published
^^^^^^^^^^^^^^^^^^^^

============================ ========================================================================================================================================================================================== =====================================================
ROS Topic                    Interface                                                                                                                                                                                  Description
============================ ========================================================================================================================================================================================== =====================================================
``ros2_output_image``        `sensor_msgs/Image <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/Image.msg>`__                                                                                    Output ROS 2 image converted from NITROS bridge image
``ros2_output_bridge_image`` :ir_repo:`isaac_ros_nitros_bridge_interfaces/msg/NitrosBridgeImage <isaac_ros_common> <isaac_ros_nitros_bridge_interfaces/msg/NitrosBridgeImage.msg>`                                      Output NITROS bridge image converted from ROS 2 image
============================ ========================================================================================================================================================================================== =====================================================

.. |package_name| replace:: ``isaac_ros_nitros_bridge_ros2``
