public/v/release-4.6/_sources/repositories_and_packages/isaac_ros_nitros/isaac_ros_nitros_bridge/isaac_ros_nitros_bridge_ros2/index.rst.txt
==============
|package_name|
==============

:ir_github:`<isaac_ros_nitros> <isaac_ros_nitros_bridge/isaac_ros_nitros_bridge_ros2>`

API
----

Usage
^^^^^

.. code:: bash

   ros2 launch isaac_ros_nitros_bridge_ros2 isaac_ros_nitros_bridge_image_converter.launch.py pub_image_name:=output_image sub_image_name:=input_image

.. code:: bash

   ros2 launch isaac_ros_nitros_bridge_ros2 isaac_ros_nitros_bridge_tensor_list_converter.launch.py pub_tensor_list_name:=output_tensor_list sub_tensor_list_name:=input_tensor_list

ROS Parameters
^^^^^^^^^^^^^^

.. list-table::
   :header-rows: 1

   * - ROS Parameter
     - Type
     - Default
     - Description

   * - ``num_blocks``
     - ``int64_t``
     - ``40``
     - The number of pre-allocated GPU memory blocks

ROS Topics Subscribed
^^^^^^^^^^^^^^^^^^^^^

.. list-table::
   :header-rows: 1

   * - ROS Topic
     - Type
     - Description

   * - ``ros2_input_image``
     - `sensor_msgs/Image <https://github.com/ros2/common_interfaces/blob/:ir_ros_distro:/sensor_msgs/msg/Image.msg>`__
     - Input ROS 2 image to be converted to NITROS bridge image
   * - ``ros2_input_bridge_image``
     - :ir_repo:`isaac_ros_nitros_bridge_interfaces/msg/NitrosBridgeImage <isaac_ros_common> <isaac_ros_nitros_bridge_interfaces/msg/NitrosBridgeImage.msg>`
     - Input NITROS bridge image to be converted to ROS 2 image

ROS Topics Published
^^^^^^^^^^^^^^^^^^^^

.. list-table::
   :header-rows: 1

   * - ROS Topic
     - Type
     - Description

   * - ``ros2_output_image``
     - `sensor_msgs/Image <https://github.com/ros2/common_interfaces/blob/:ir_ros_distro:/sensor_msgs/msg/Image.msg>`__
     - Output ROS 2 image converted from NITROS bridge image
   * - ``ros2_output_bridge_image``
     - :ir_repo:`isaac_ros_nitros_bridge_interfaces/msg/NitrosBridgeImage <isaac_ros_common> <isaac_ros_nitros_bridge_interfaces/msg/NitrosBridgeImage.msg>`
     - Output NITROS bridge image converted from ROS 2 image

.. |package_name| replace:: ``isaac_ros_nitros_bridge_ros2``
